--- a/wp-content/themes/workingnyc/views/guides/single.twig
+++ b/wp-content/themes/workingnyc/views/guides/single.twig
@@ -89,7 +89,7 @@
     }} %}
 
     <div class="bg-scale-0" id="explore">
-      <div class="site-max-width pb-8 mb-8">
+      <div class="pb-8 mb-8">
         <div class="py-4" data-active-navigation="observe" data-active-navigation-observe-items="heading">
           {% if collections %}
           {% for collection in collections %}
