--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -47,7 +47,7 @@
       </header>
     </div>
     <section class="site-max-width">
-      <div class="wrap">
+      <div>
         <div class="pb-8 mb-8">
           {% if newsletter_message %}
           <article class="c-alert c-alert-status-primary mt-5" data-js="alert-warning">
