--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -322,7 +322,7 @@
 
     {# Suggest Update #}
     <section class="site-max-width bg-scale-1 pb-4 pb-8 mb-8" id="suggest-update">
-      <div class="wrap">
+      <div>
         <article class="c-alert" data-js="alert-help">
           <div class="c-alert__graphic">
             <svg aria-hidden="true" class="icon-ui">
