--- a/wp-content/themes/workingnyc/views/archive.twig
+++ b/wp-content/themes/workingnyc/views/archive.twig
@@ -90,24 +90,7 @@
       </section>
 
       <div class="site-max-width py-6 pb-8 mb-4">
-        <div class="wrap">
-          {# <button id="pagination" data-amount="1" class="btn btn-primary w-full">Show more</button> #}
-
-          {# {% if post_type == 'programs' %}
-          <article class="c-alert mb-3" data-js="suggest-a-program">
-            <div class="c-alert__graphic">
-              <svg aria-hidden="true" class="icon-ui">
-                <use href="#lucide-help-circle"></use>
-              </svg>
-            </div>
-
-            <div class="c-alert__body">
-              <b class="text-alt mb-1">{{ options.new_program_heading }}</b>
-
-              <p data-js-alert="text">{{ options.new_program_body | striptags('<a><svg><title><use>') }}</p>
-            </div>
-          </article>
-          {% endif %} #}
+        <div>
         </div>
       </div>
     </div>
