--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -5,11 +5,11 @@
   <header class="bg-gradient-to-r from-[#E5F4FF] to-[#fefefe] {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full">
 
       {% if post.thumbnail %}
-      <div class="desktop-gap-x-72 tablet-gap-x-56 desktop:w-9/12 tablet:w-10/12 tablet:grid grid-cols-[3fr_2fr] tablet:px-0 px-2 mx-auto tablet:py-7 py-4 desktop:py-6">
-        <div class="text-center">
+      <div class="desktop-gap-x-72 tablet-gap-x-56 site-max-width tablet:grid grid-cols-[3fr_2fr] tablet:py-7 py-4 desktop:py-6">
+        <div class="text-left">
       {% else %}
       <div class="site-max-width">
-        <div class="wrap">
+        <div>
       {% endif %}
 
           {% set featured_image = '<img class="bg-image-square mb-2 tablet:hidden animated fadeIn hidden" loading="eager" style="object-position: ' ~ post.thumbnail.focal_point ~ ';" src="' ~ post.thumbnail.src('tablet') ~ '" alt="' ~ post.thumbnail.alt ~ '"/>' %}
@@ -30,7 +30,7 @@
       </div>
   </header>
 
-  <main id="content" class="bg-shape-wnyc-content mx-2 tablet:mx-7 desktop-mx-26">
+  <main id="content" class="bg-shape-wnyc-content">
     <div>
       {# Collections #}
       {% if collections %}
@@ -53,7 +53,7 @@
       {% if announcements %}
       <section class="pb-8" id="announcements">
         <div class="site-max-width py-2 tablet:py-8">
-          <div class="wrap">
+          <div>
             <h2 class="h3 text-alt mt-0">{{ __('Announcements', 'WNYC') }}</h2>
 
             <div class="py-4 grid gap-6 tablet:grid-cols-2 tablet:gap-8">
