--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -69,7 +69,7 @@
           <section data-active-navigation-observe-item="heading" {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
             {% if section.section_title %}
             <div class="pt-utility-anchor bg-scale-0 sticky top-0 z-10">
-              <div class="wrap">
+              <div>
                 <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3" data-active-navigation-item="focus">
                   {{ section.section_title }}
                 </h3>
@@ -77,7 +77,7 @@
             </div>
             {% endif %}
 
-            <div class="wrap">
+            <div>
               {{ section.section_content }}
             </div>
           </section>
