--- a/wp-content/themes/workingnyc/views/talent-portal-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-page.twig
@@ -43,13 +43,13 @@
     {% if sections %}
     <div class="bg-scale-0">
       <div class="layout-content pb-8 mb-8">
-        <div class="py-4" data-active-navigation="observe" data-active-navigation-observe-items="heading">
+        <div class="py-4">
           {% for section in sections %}
-          <section data-active-navigation-observe-item="heading" {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
+          <section {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
             {% if section.section_title %}
             <div class="pt-utility-anchor bg-scale-0 sticky top-0 z-10">
               <div class="wrap">
-                <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3" data-active-navigation-item="focus">
+                <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
                   {{ section.section_title }}
                 </h3>
               </div>
