--- a/wp-content/themes/workingnyc/views/guides/single.twig
+++ b/wp-content/themes/workingnyc/views/guides/single.twig
@@ -8,7 +8,7 @@
   <main class="bg-scale-1">
     {# Header Section #}
     {% if post.thumbnail %}
-    <header class="o-header px-0 relative">
+    <header class="px-0 relative">
       <div class="site-max-width py-2 tablet:py-8 tablet:grid grid-cols-2 gap-x-5">
         <div>
           {% include 'components/breadcrumbs.twig' with {
@@ -30,13 +30,14 @@
             {% endif %}
 
             <h1 id="page-heading" class="o-header__heading">{{ post.title }}</h1>
+            {# <div>{{ dump(post.thumbnail) }}</div> #}
           </div>
 
           {% set featured_image = '<img class="bg-image-square mb-2 tablet:hidden animated fadeIn" loading="eager" style="object-position: ' ~ post.thumbnail.focal_point ~ ';" src="' ~ post.thumbnail.src('tablet') ~ '" alt="' ~ post.thumbnail.alt ~ '"/>' %}
           {{ post.post_content|replace({"<!-- featured_image -->": featured_image}) }}
         </div>
         <div class="hidden tablet:flex">
-          <img class="w-full max-h-[500px] object-cover" style="object-position: ' ~ post.thumbnail.focal_point ~ ';" loading="eager" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
+          <img class="w-full object-cover aspect-[4/3]" style="object-position: {{ post.thumbnail.focal_point }};" loading="eager" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
         </div>
       </div>
     </header>
