fix margins on employers landing page

--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -31,8 +31,8 @@
     {% endif %}
     </div>
   </header>
-  <main id="content" class="flex justify-center bg-shape-wnyc-content mx-2 tablet:mx-7 desktop-mx-26">
-    <div class="max-w-[1232px]">
+  <main id="content" class="flex justify-center bg-shape-wnyc-content">
+    <div>
       {# Collections #}
       {% if collections %}
         {% for collection in collections %}
