fix header padding on newsletter and single page

--- a/wp-content/themes/workingnyc/views/single.twig
+++ b/wp-content/themes/workingnyc/views/single.twig
@@ -28,7 +28,7 @@
 
     {# Header Section #}
     <div class="site-max-width">
-      <header class="o-header">
+      <header class="o-header px-0">
         <div>
           {% include 'components/breadcrumbs.twig' with
             {
