--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -32,7 +32,7 @@
 
     {# Header Section #}
     <div class="site-max-width">
-      <header class="o-header">
+      <header class="o-header px-0">
         <div class="w-full">
           <div class="o-header__title">
             <h1 id="page-heading" class="o-header__heading">
