--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -16,8 +16,14 @@
 
           {# The post content can include html tags and CSS classes. The following line is an example of some classes that were used in the past #}
           {# class="h4 text-center tablet:text-start tablet:text-h3 font-primary text-alt" #}
-          <h1 class="my-3">{{ post.post_content }}</h1>
+          <h1 class="mt-3 mb-6">{{ post.post_content }}</h1>
 
+          <button class="btn btn-secondary" href="/jobseekers/programs">
+            <div>Explore programs</div>
+            <svg aria-hidden="true" class="w-[20px] h-[20px] ml-[4px] icon-ui rtl:flip">
+              <use href="#lucide-arrow-right"></use>
+            </svg>
+          </button>
         </div>
 
     {% if post.thumbnail %}
