--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -4,8 +4,7 @@
 <article class="c-card h-full {{ post.classes }}">
   <header class="c-card__header py-3 px-5 desktop:pt-3 desktop:pb-3 tablet:px-5 tablet:px-5">
     <span>
-      <a class="c-card__header-link pb-2 desktop:pt-3 pt-2" href="{{ post.link }}" {% if post.external %}target="_blank" rel="noopener"{% endif %}>
-        <h3 class="c-card__title">
+  <a class="c-card__header-link pb-2 desktop:pt-3 pt-2" href="{{ post.link }}" {% if post.external %}target="_blank" rel="noopener"{% endif %}>        <h3 class="c-card__title">
           <span class="c-card__underline">{{ post.program_plain_language_title }}</span>
 
           {% if post.external %}
@@ -27,9 +26,6 @@
 
   <div class="c-card__body py-3 px-5 desktop:pt-5 desktop:pb-5 tablet:px-5 tablet:px-5">
     {% if post.status %}<p class="c-card__status">
-      {% if post.status.recruiting %}<mark class="badge">
-        {{ post.status.recruiting.name }}<span class="sr-only">.</span>
-      </mark>{% endif %}
 
       {% if post.status.disability %}<span>
         <svg class="icon text-em" role="img">
@@ -51,7 +47,6 @@
         <span class="sr-only">{{ post.status.language.name }}</span>
       </span>{% endif %}
     </p>{% endif %}
-
     {% if post.preview %}
       <div class="c-card__summary">
         <p class="pb-3">
@@ -59,7 +54,7 @@
         </p>
       </div>
     {% endif %}
-
+    
     <ul class="c-card__features">
       {% if post.services %}<li>
         <svg class="icon-ui c-card__feature-icon h-22 w-22" role="img">
@@ -92,11 +87,10 @@
       </li>{% endif %}
     </ul>
 
-    <a class="c-card__cta w-fit px-3 pt-2 pb-2  text-22 font-[700]" href="{{ post.link }}" {% if post.external %}target="_blank" rel="noopener"{% endif %}>
-      {% if post.external %}
-      <span>{{ post.link_label }}</span>
+   <a class="btn btn-secondary desktop:w-fit w-full px-3 pt-3 pb-3" href="{{ post.link }}" {% if post.external %}target="_blank" rel="noopener"{% endif %}>      {% if post.external %}
+      <span class="text-[22px] font-[700]">{{ post.link_label }}</span>
       {% else %}
-      <span>{{ __('Learn more', 'WNYC') }} <span class="sr-only">{{ __('about', 'WNYC') }} <span>{{ post.program_title }}</span></span></span>
+      <span class="text-[22px] font-[700]">{{ __('Learn more', 'WNYC') }} <span class="sr-only">{{ __('about', 'WNYC') }} <span>{{ post.program_title }}</span></span></span>
       {% endif %}
       <svg aria-hidden="true" class="icon-ui rtl:flip h-22 w-22">
         <use href="#lucide-{% if post.external %}external-link{% else %}arrow-right{% endif %}"></use>
