Homepage_Program_Guides_page_badges_issue_Resolved

--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -34,7 +34,8 @@
             {% else %}
               <div class="{% if this.guides %}{% else %}wrap-start {% if loop.last %}wrap-end{% endif %}{% endif %} transform-none tablet:p-0">
                 {% include [ post.post_type ~ '/' ~ post.singular ~ '.twig'] with {
-                  post: post
+                  post: post,
+                  is_home: is_home
                 } %}
               </div>
             {% endif %}
