--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -3,37 +3,19 @@
 {% block content %}
 <div class="bg-scale-2">
   <main class="bg-scale-1" id="content">
-    <div class="site-max-width bg-scale-1">
-      {% if employer == true %}
-        {% if options.employers_link is defined %}
-          {% set home_link = options.employers_link %}
-        {% else %}
-          {% set home_link = site.url %}
-        {% endif %}
-      {% else %}
-        {% if options.job_seekers_link is defined %}
-          {% set home_link = options.job_seekers_link %}
-        {% else %}
-          {% set home_link = site.url %}
-        {% endif %}
-      {% endif %}
-      {% include ['components/utility-nav.twig'] with {
-        return: {
-          'label': __('Home', 'WNYC'),
-          'link': home_link
-        },
-        web_share: {
-          'title': post.title,
-          'text': (post.web_share_text) ? post.web_share_text,
-          'url': fn('wp_get_shortlink')
-        }
-      } %}
-    </div>
-
     {# Header Section #}
     <div class="site-max-width">
       <header class="o-header px-0">
         <div class="w-full">
+        {% include 'components/breadcrumbs.twig' with {
+              crumbs: [
+                {
+                  'label': post.title,
+                  'link': ''
+                }
+              ]
+            }
+          %}
           <div class="o-header__title">
             <h1 id="page-heading" class="o-header__heading">
               {% if function('is_404') %}{{ __('Page Not Found', 'WNYC') }}{% else %}{{ post.title }}{% endif %}
