--- a/wp-content/themes/workingnyc/views/components/homepage-card.twig
+++ b/wp-content/themes/workingnyc/views/components/homepage-card.twig
@@ -1,5 +1,31 @@
 {# @Type   Component #}
 {# @For    Generic Templates, Short-codes #}
-<article class="">
-  {{ dump(this) }}
+<article class="p-4 min-h-[320px] rounded border-[1px] border-[#D4D7DC]">
+  {% set title = 'government' %}
+  {% set svg_path = '#program-card-government' %}
+  {% if this.logo == 'handshake' %}
+    {% set title = 'handshake' %}
+    {% set svg_path = '#program-card-career-services' %}
+  {% elseif this.logo == 'briefcase' %}
+    {% set title = 'briefcase' %}
+    {% set svg_path = '#program-card-work' %}
+  {% elseif this.logo == 'education' %}
+    {% set title = 'education' %}
+    {% set svg_path = '#program-card-education' %}
+  {% endif %}
+  <header>
+    <svg class="c-card__icon w-8 h-8 fill-none" role="img">
+      <title>{{ title }}</title>
+      <use href="{{ svg_path }}"></use>
+    </svg>
+  </header>
+  <div class="py-3">
+    <h5 class="text-[23px] text-[#0C264D] font-[700] mb-2">
+        {{ this.title }}
+    </h5>
+    <p class="min-h-[90px] text-[20px] text-[#0C264D]">
+      {{ this.description }}
+    </p>
+  </div>
+  <a class="font-600 text-[#0C264D]" href="{{ this.cta.url }}" target="{{ this.cta.target }}">{{ this.cta.title }}</a>
 </article>
