--- a/wp-content/themes/workingnyc/views/components/announcement.twig
+++ b/wp-content/themes/workingnyc/views/components/announcement.twig
@@ -1,9 +1,9 @@
 {# @Type   Component #}
 {# @For    Post Type #}
 {# @Class  timber-posts/Announcements.php #}
-<article class="c-card c-card-transparent h-full">
-  <header class="c-card__header pb-2">
-    <a href="{{ this.link }}" target="{{ this.target }}" class="c-card__header-link">
+<article class="c-card c-card-transparent h-full px-4 pt-4 pb-4">
+  <header class="c-card__header">
+    <a href="{{ this.link }}" target="{{ this.target }}" class="c-card__header-link pt-4">
       <h5 class="c-card__title">
         {% if this.date_updated|date('U') > this.status_period|date('U') %}
         <mark class="badge" title="{{ this.status_title }}">
@@ -22,8 +22,8 @@
     </a>
   </header>
 
-  <div class="c-card__body pt-2 tablet:pt-3">
-    <div class="c-card__summary height-176px overflow-hidden">
+  <div class="c-card__body tablet:pt-3">
+    <div class="overflow-hidden">
     <ul class="c-card__features">
       {% if this.announcement_date is not empty %}
         <li>
@@ -65,7 +65,7 @@
       {{ this.announcement_details|wpautop }}
     </div>
 
-    <ul class="c-card__features">
+    <ul class="c-card__features pb-3">
       <li>
         <svg class="icon-ui c-card__feature-icon" role="img">
           <title>{{ __('Last Updated', 'WNYC') }}</title>
@@ -81,7 +81,7 @@
       </li>
     </ul>
 
-    <div class="c-card__web-share">
+    <div class="c-card__web-share ">
       {% set announcement_share_id = fn('uniqid') %}
 
       {% include 'components/web-share.twig' with {this: {
