--- a/wp-content/themes/workingnyc/views/components/homepage-card.twig
+++ b/wp-content/themes/workingnyc/views/components/homepage-card.twig
@@ -2,7 +2,7 @@
 {# @For    Generic Templates, Short-codes #}
 <article class="p-4 min-h-[320px] rounded border-[1px] border-[#D4D7DC]">
   {% set title = 'government' %}
-  {% set svg_path = '#program-card-government' %}
+  {% set svg_path = '#program-card-government1' %}
   {% if this.logo == 'handshake' %}
     {% set title = 'handshake' %}
     {% set svg_path = '#program-card-career-services' %}
