--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -13,7 +13,7 @@
   </header>
 
   <div class="c-card__body py-3 px-5 tablet:py-5 min-h-[206px] justify-between">
-    <div>
+    <div class="mb-0">
       {% if post.status and not is_home %}
         <p class="c-card__status">
           {% if post.status.recruiting %}
