set width and height on svg

--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -4,7 +4,7 @@
 <div class="bg-white">
 
     <div class="flex justify-center tablet:justify-start px-2 tablet:px-[104px] py-3">
-      <svg aria-hidden="true" class="h-5 max-w-[210px]">
+      <svg aria-hidden="true" class="h-5 max-w-[210px]" width="210" height="40">
         <title>{{ __('Jobs NYC', 'WNYC') }}</title>
         <use href="#logo-jobs-nyc-black-blue"></use>
       </svg>
