--- a/wp-content/themes/workingnyc/views/guides/single.twig
+++ b/wp-content/themes/workingnyc/views/guides/single.twig
@@ -28,7 +28,7 @@
             </svg>
             {% endif %}
 
-            <h1 id="page-heading" class="o-header__heading">{{ post.title }}</h1>
+            <h1 id="page-heading" class="o-header__heading text-[40px] tablet:text-[50px] desktop:text-[55px]">{{ post.title }}</h1>
           </div>
           {{ post.post_content }}
         </div>
