--- a/wp-content/themes/workingnyc/views/job-boards/job-board.twig
+++ b/wp-content/themes/workingnyc/views/job-boards/job-board.twig
@@ -6,7 +6,7 @@
     <div class="text-[18px] tablet:text-[20px] text-[#0C264D]">{{ post.agency}}</div>
   </header>
   <div class="py-3 px-5">
-    <div class="text-[18px] tablet:text-[20px] mb-3 min-h-[75px]">{{ post.description }}</div>
+    <div class="text-[18px] mb-3 min-h-[75px]">{{ post.description }}</div>
     <a class="no-underline hover:underline hover:decoration-[#30374F] text-[20px] font-[600] text-[#30374F] flex items-center" href="{{ post.cta_link.url }}" target="{{ post.cta_link.target }}">
       <span class="leading-[22px]">{{ post.cta_link.title }}</span>
       <svg aria-hidden="true" class="w-3 h-3 mx-[4px] icon-ui rtl:flip">
